force-app/main/default/objects/SObjectTriggerSetting__mdt/SObjectTriggerSetting__mdt.object-meta.xml
<CustomObject>
    <description>SObject Trigger Setting</description>
    <label>SObject Trigger Setting</label>
    <pluralLabel>SObject Trigger Settings</pluralLabel>
</CustomObject>