force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description about trigger handler</description>
    <inlineHelpText>Description about trigger handler</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>