force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True for Trigger to deactivate, False for activate the Trigger</description>
    <inlineHelpText>True for Trigger to deactivate, False for activate the Trigger</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>