force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>Enter the API Name of the object for this trigger. Include Package prefix.</description>
    <inlineHelpText>Enter the API Name of the object for this trigger. Include Package prefix.</inlineHelpText>
    <label>Object Api Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>