force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/ObjectNamespace__c.field-meta.xml
<CustomField>
    <fullName>ObjectNamespace__c</fullName>
    <description>Enter the namespace object for this trigger.</description>
    <inlineHelpText
  >Enter the namespace object for this trigger.</inlineHelpText>
    <label>Object Namespace</label>
    <length>20</length>
    <type>Text</type>
</CustomField>