force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description
  >Order of execution of trigger Handler for an object</description>
    <inlineHelpText
  >Order of execution of trigger Handler for an object</inlineHelpText>
    <label>Order of Execution</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>