force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/RecursionCount__c.field-meta.xml
<CustomField>
    <fullName>RecursionCount__c</fullName>
    <description>Recursion count for SObject trigger</description>
    <inlineHelpText>Recursion count for SObject trigger</inlineHelpText>
    <label>RecursionCount</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>