force-app/main/default/objects/SObjectTriggerSetting__mdt/fields/TriggerHandlerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerHandlerName__c</fullName>
    <description>Trigger handler name to invoke</description>
    <inlineHelpText>Trigger handler name to invoke</inlineHelpText>
    <label>Trigger Handler Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>